[gd_scene load_steps=5 format=3 uid="uid://bk6lwja4mcomq"]

[ext_resource type="Script" path="res://scripts/user_interface/builder_test.gd" id="1_xo1x5"]
[ext_resource type="Theme" uid="uid://d018ofb37nf7u" path="res://assets/resources/themes/default.tres" id="2_0tpta"]
[ext_resource type="Texture2D" uid="uid://dlo3s5bkq7x0c" path="res://assets/ui/exit_icon.png" id="3_rvsdw"]
[ext_resource type="Texture2D" uid="uid://dm1fbfmrtic6e" path="res://assets/ui/reset_icon.png" id="4_ks1t0"]

[node name="BuilderTest" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_xo1x5")

[node name="MarginContainer" type="MarginContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="BoxContainer" type="BoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme = ExtResource("2_0tpta")

[node name="MovesCount" type="Label" parent="MarginContainer/BoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.25098, 0.184314, 0.105882, 1)
theme_override_font_sizes/font_size = 128
text = "0"

[node name="BottomContainer" type="HBoxContainer" parent="MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_constants/separation = 20

[node name="ExitBtn" type="Button" parent="MarginContainer/BottomContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_mode = 0
theme = ExtResource("2_0tpta")
theme_override_font_sizes/font_size = 50
icon = ExtResource("3_rvsdw")

[node name="ResetBtn" type="Button" parent="MarginContainer/BottomContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_mode = 0
theme = ExtResource("2_0tpta")
theme_override_font_sizes/font_size = 50
icon = ExtResource("4_ks1t0")

[connection signal="pressed" from="MarginContainer/BottomContainer/ExitBtn" to="." method="_on_exit_btn_pressed"]
[connection signal="pressed" from="MarginContainer/BottomContainer/ResetBtn" to="." method="_on_reset_btn_pressed"]
